--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -1,27 +1,54 @@
+/*boilerplate code for CSS*/
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
 /* Main Section */
 main {
     font-family: 'Lato', sans-serif;
-    padding: 20px;
+    padding: 2vw;
   }
   
   /* Hero Section */
   .hero {
-    text-align: center;
-    padding: 50px 20px;
-    background: linear-gradient(145deg, #fbd3e9, #bb377d);
-    color: #fff;
+    text-align: center; 
+    width:100%;
+    height:100%;
+    color:#fffffffe;
     border-radius: 10px;
     margin-bottom: 40px;
+  }
+  .hero video{
+    height: 100%;
+    position: relative ;
+    /* z-index:-1 ; */
+    width: 100%;
+    object-fit: cover;
+    object-position: center;
   }
   
   .hero h1 {
     font-size: 2.5rem;
     margin-bottom: 20px;
+    position: absolute;
+    bottom: 20% ;
+    left: 30% ;
+    width:50% ;
+    mix-blend-mode:difference;
   }
   
   .hero p {
     font-size: 1.2rem;
     margin-bottom: 30px;
+    color : black ;
+    font-weight: 700;
   }
   
   .hero .btn {
@@ -58,10 +85,12 @@ main {
   }
   
   .cake {
-    background: #fff;
-    border-radius: 10px;
+    backdrop-filter: blur(16px) saturate(180%);
+    -webkit-backdrop-filter: blur(16px) saturate(180%);
+    background-color: rgba(151, 152, 152, 0.75);
+    border-radius: 12px;
+    border: 1px solid rgba(209, 213, 219, 0.3);
     padding: 20px;
-    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
     text-align: center;
   }
   
