--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,4 +1,7 @@
 footer {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
   display: flex;
   flex-direction: column;
   align-items: center;
