--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,5 +1,8 @@
 /* Header.css */
 .header {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
   background: linear-gradient(145deg, #fbd3e9, #bb377d);
   padding: 20px;
   border-bottom: 5px solid #f8b500;
@@ -21,6 +24,9 @@
 }
 
 .navigation a {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
   text-decoration: none;
 }
 
